# FOSSync

./: .gitmodules  CMakeLists.txt  README.md  compile_flags.txt
.github/workflows/: ci.yml
client/: a.out  main.c
include/: selog
include/fossync/server/: functions.txt
lib/: CMakeLists.txt
src/: CMakeLists.txt  args.c  args.h  commands.c  commands.h  main.c  msg.c  msg.h  worker.c  worker.h
src/server/: CMakeLists.txt  args.c  args.h  compiler.h  container_of.h  functions.c  functions.h  list.h  main.c  server.h  types.h  worker.c  worker.h
src/tests/: CMakeLists.txt  main.cpp  test-server.cpp  worker.cpp
